<resources>
    <string name="app_name">SPP</string>

    <string name="hello_world">Hello world!</string>

    <string name="parse_app_id">bIfkzLusNLlewJ7kGFhHq7WhnHtt0feiUiAYnZ1k</string>
    <string name="parse_client_key">YREgMp3bU0c5bubYdCL9QphwvlFqmkEtep0gN3pZT</string>
    <string name="qc">Quick Contact</string>
    <string name="home">Home</string>
    <string name="lock">Lockers</string>
    <string name="child_lock">Children\'s Lockers</string>
    <string name="img_lock">Image Locker</string>
    <string name="list_master">It\'s All Here</string>
    <string name="title_activity_ind_list">Individual List</string>
    <string name="temp_title">Groceries(sample List)</string>
    <string name="new_list">The New Stuff</string>
    <string name="lname">List Name</string>
    <string name="litem">New Item</string>
    <string name="ldescrip">Brief Description</string>
    <string name="allergy">Allergies:</string>
    <string name="medical">Medical Conditions:</string>
    <string name="shot">Shot Records:</string>
    <string name="add">Additional Information</string>
    <string name="lsign">Change Your Registered Email Login</string>
    <string name="action_settings">Logout</string>
    <string name="title_activity_new_list">NewListActivity</string>
    <string name="title_activity_qcnew">New Contact</string>
    <string name="title_activity_qcdetail">Contact Details</string>
    <string name="title_activity_lchild">Chidren\'s Lockers</string>
    <string name="title_activity_lnew">New Edit</string>
    <string name="title_activity_ldetail">Child Detail</string>
    <string name="title_activity_limage">Image Locker</string>
    <string name="title_activity_lidetail">Image Detail</string>
    <string name="title_activity_lsign_in">Sign Back In</string>
    <string name="sign">Change Username and Logout</string>
    <string name="title_activity_home">Single Parent Planner</string>
    <string name="addNew">Add</string>
    <string name="share">Share</string>
    <string name="cl">Current Lists</string>
    <string name="image">Image</string>
    <string name="list_save">Add items to Current Lists or Create a New List and Save. Click on Done when finished</string>
    <string name="finish">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save It</string>
    <string name="qname">Name</string>
    <string name="qnum">Phone Number</string>
    <string name="qemail">Email</string>
    <string name="call">Call</string>
    <string name="mess">Message</string>
    <string name="edit">Edit</string>
    <string name="sam_num">6025551212</string>
    <string name="qnote">Notes</string>
    <string name="qcat">Select Category</string>
    <string name="sam_name">M</string>
    <string name="sam_name2">Mary Poppins</string>
    <string name="sam1">None</string>
    <string name="sam2">Asthma</string>
    <string name="sam_email">mpoppins@magic.com</string>
    <string name="link1">https://www.dropbox.com/s/czq53yacyf2eevs/R_Warren_Resume.pdf?dl=0</string>
    <string name="notes">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet magna sed ex ornare feugiat. Morbi a lacus scelerisque, tristique ipsum in, dictum lorem.</string>
    <string name="newItem">New Item (Required)</string>
    <string name="iten_descrip">Brief Description</string>
    <string name="list_name">New List Name (Required)</string>
    <string name="add_info">Additional Information</string>
    <string name="tempCSave">New Update Child Info</string>
    <string name="cName">Name (Required)</string>
    <string name="cdob">Date of Birth</string>
    <string name="css">SS#</string>
    <string name="callergy">Allergies</string>
    <string name="cmed">Medical Conditions</string>
    <string name="cshot">Link To Shot Records</string>
    <string name="due_name">name</string>
    <string name="doc_link">information</string>
    <string name="save_item">Save Item</string>
    <string name="temp_date">10/17/2001</string>
    <string name="temp_ss">123–45–6789</string>
    <string name="action_change">Settings</string>

    <string-array name="qc_cat">
        <item >Select Category (Required)</item>
        <item >Child Care</item>
        <item >Medical</item>
        <item >Education</item>
        <item >Other</item>
    </string-array>

    <string-array name="list_filter">
        <item >Show All</item>
        <item >Show Pending</item>
        <item >Show Completed</item>
    </string-array>

    <string name="title_activity_add_info_cell">addInfoCell</string>
    <string name="title_activity_contact_cell">ContactCell</string>
    <string name="dialer">dialer</string>
    <string name="message_icon">message</string>
    <string name="email_icon">emailIcon</string>
    <string name="edit_icon">editIcon</string>
    <string name="title_activity_ind_list_cell">IndListCell</string>
    <string name="title_activity_photo_cell">photoCell</string>
    <string name="previeImage">preview image</string>
    <string name="photo_text">Photo Name</string>
    <string name="title_activity_list_master">ListMasterActivity</string>
    <string name="d_create">date created</string>
    <string name="qcname">Name (Required)</string>
    <string name="qcphone">Phone Number (Required)</string>
    <string name="qcemail">Email</string>
    <string name="qcnotes">Notes</string>
    <string name="title_activity_settings">SPP</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_new_img">Name New Image</string>
    <string name="take_pic">take pic</string>
    <string name="warning_img">Please be aware new images may take a few moments to appear.</string>
    <string name="l_instructions">Click The Add Icon to start creating your first list</string>
    <string name="c_ins">Click the Add Icon to add a child\'s Information</string>
    <string name="q_contact">Click the Add Icon to add your first Quick Contact</string>
    <string name="img_ins">Take a quick photo of your important documents and store them here. Simply name your image and click the camera icon. We will take it from there.</string>
    <string name="detete_text">Delete Item?</string>
    <string name="trash_can">trash can</string>
    <string name="wsrning_text">Page will reload on on delete</string>
    <string name="title_activity_child_name_cell">ChildNameCell</string>
    <string name="warning_text_2">Warning! This can not be undone!</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="repeat_pass">Repeat New Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_text">Change Your Password</string>
    <string name="repeat_user">repeat new email address</string>
    <string name="user_name">new email address</string>
    <string name="logo_descrip">logo</string>
    <string name="l_signin_logo">logo</string>
    <string name="verify_pass">Verify Password</string>
    <string name="verify_pass_inst">Please Verify Your Password To Access The Locker Area</string>
    <string name="entry_lock">Enter Lockers</string>
    <string name="swipe_left">Swipe Left To Delete</string>
    <string name="add_info_hint">You must save additional information prior to saving. No Limit.</string>
    <string name="title_activity_additional">SPP</string>
    <string name="title_activity_add_info">SPP</string>
    <string name="add_add">add_add</string>


</resources>
