<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ginddesign.spp.LImageActivity">
    <item android:id="@+id/action_home" android:title="@string/home"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_qc" android:title="@string/qc"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_child" android:title="@string/child_lock"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_change" android:title="@string/action_change"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
