<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ginddesign.spp.ListMasterActivity">
    <item android:id="@+id/action_add" android:title="@string/addNew" android:icon="@drawable/plus"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_qc" android:title="@string/qc"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_lock" android:title="@string/lock"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
