<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ginddesign.spp.LNewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tempCSave"
        android:id="@+id/cTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textPersonName|textAutoCorrect"
        android:ems="10"
        android:id="@+id/cName"
        android:hint="@string/cName"
        android:layout_below="@+id/cTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/cdob"
        android:hint="@string/cdob"
        android:layout_below="@+id/cName"
        android:layout_toLeftOf="@+id/css"
        android:layout_toStartOf="@+id/css" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/css"
        android:hint="@string/css"
        android:layout_below="@+id/cName"
        android:layout_alignRight="@+id/cName"
        android:layout_alignEnd="@+id/cName"
        android:phoneNumber="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cAllergy"
        android:hint="@string/callergy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cdob"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cMed"
        android:hint="@string/cmed"
        android:layout_below="@+id/cAllergy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cShot"
        android:hint="@string/cshot"
        android:layout_below="@+id/cMed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveIt"
        android:background="#000EFF"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/cShot"
        android:layout_alignEnd="@+id/cShot"
        android:clickable="true"
        android:textColor="#F2F4F7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#000EFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="#F2F4F7" />

</RelativeLayout>
