<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ginddesign.spp.AddInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_info"
        android:id="@+id/textView22"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="32sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/docName"
        android:hint="@string/due_name"
        android:inputType="textCapWords"
        android:layout_marginBottom="43dp"
        android:layout_above="@+id/docLink"
        android:layout_alignRight="@+id/indSave"
        android:layout_alignEnd="@+id/indSave" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/docLink"
        android:hint="@string/doc_link"
        android:inputType="textCapSentences"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/indSave"
        android:layout_alignEnd="@+id/indSave" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_item"
        android:id="@+id/indSave"
        android:background="#000EFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#F2F4F7"
        android:textStyle="bold"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button"
        android:background="#000EFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="#F2F4F7"
        android:layout_alignBottom="@+id/indSave"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
