<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ginddesign.spp.QCNewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="26dp"
        android:textStyle="bold"
        android:fontFamily="Times New Roman" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qcSpin"
        android:paddingLeft="30dp"
        android:spinnerMode="dropdown"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel1"
        android:background="#000EFF"
        android:clickable="false"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save1"
        android:textStyle="bold|italic"
        android:background="#000EFF"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/qcName"
        android:hint="@string/qcname"
        android:layout_below="@+id/qcSpin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/save1"
        android:layout_toStartOf="@+id/save1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/qcPhone"
        android:hint="@string/qcphone"
        android:layout_below="@+id/qcName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/qcEmail"
        android:hint="@string/qcemail"
        android:layout_below="@+id/qcPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/qcNotes"
        android:hint="@string/qcnotes"
        android:layout_below="@+id/qcEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Import"
        android:id="@+id/contactsImport"
        android:layout_alignTop="@+id/qcName"
        android:layout_alignRight="@+id/save1"
        android:layout_alignEnd="@+id/save1"
        android:layout_toRightOf="@+id/qcName"
        android:layout_toEndOf="@+id/qcName"
        android:textStyle="bold|italic" />

</RelativeLayout>
