<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.ginddesign.spp.ChildNameCell">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/detete_text"
            android:id="@+id/textView5"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/warning_text_2"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView5" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/deleteChild"
            android:layout_alignParentRight="true"
            android:src="@drawable/delete64"
            android:background="#F2F4F7"
            android:contentDescription="@string/trash_can" />
    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.ginddesign.spp.ChildNameCell">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/childName"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:textSize="24dp"
            android:textIsSelectable="false"
            android:layout_centerInParent="true"
            android:textStyle="bold" />
    </RelativeLayout>
</com.daimajia.swipe.SwipeLayout>